removed relative URLs
updated config.

--- a/daytona-bike-week.html
+++ b/daytona-bike-week.html
@@ -10,17 +10,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="./theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
 
@@ -39,11 +39,11 @@
   <meta property="og:title" content="Daytona Bike Week"/>
   <meta property="og:description" content="Length : Ride Time 10 days, plus round trip travel : VARIED Daytona Bike Week is a 10-day motorcycle rally. Motorcycle enthusiasts are invited to enjoy beautiful Spring weather, wide open beaches and parks, outdoor dining, and scenic rides throughout the Daytona Beach area and Volusia County. The Unbound Nomad offers custom …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="./daytona-bike-week.html"/>
+  <meta property="og:url" content="/daytona-bike-week.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2024-01-14 13:35:00-06:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="./author/unbound-nomad.html">
+  <meta property="article:author" content="/author/unbound-nomad.html">
   <meta property="article:section" content="Rides"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
@@ -59,12 +59,12 @@
 
 <aside>
   <div>
-    <a href="./">
-      <img src="./theme/img/profile.png" alt="" title="">
+    <a href="/">
+      <img src="/theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="./"></a>
+      <a href="/"></a>
     </h1>
 
 
@@ -75,19 +75,19 @@
 
             <li>
               <a target="_self"
-                 href="./pages/about.html#about">
+                 href="/pages/about.html#about">
                 | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/contact.html#contact">
+                 href="/pages/contact.html#contact">
                 | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/rides.html#rides">
+                 href="/pages/rides.html#rides">
                 | Rides |
               </a>
             </li>
@@ -142,7 +142,7 @@
       
     <h1 id="daytona-bike-week">Daytona Bike Week</h1>
     <p>
-      Posted on Sun 14 January 2024 in <a href="./category/rides.html">Rides</a>
+      Posted on Sun 14 January 2024 in <a href="/category/rides.html">Rides</a>
 
     </p>
   </header>
@@ -174,15 +174,15 @@
 </tbody>
 </table>
 <div style="text-align: justify">Daytona Bike Week is a 10-day motorcycle rally. Motorcycle enthusiasts are invited to enjoy beautiful Spring weather, wide open beaches and parks, outdoor dining, and scenic rides throughout the Daytona Beach area and Volusia County. The Unbound Nomad offers custom adventure packages that start with rallying your party at a meeting point local to you, and include all the food, fuel, and route planning along the way to Daytona Beach. Your route is planned, including fuel stops, so you can enjoy the scenery along the way. Your food options are planned in advance so you can focus on the comradery of the ride and the fun of the rally itself once you arrive. And accommodations are covered for the duration of your adventure, whether you decide to tent camp, rent a private chateau, or stay in 3-4 star hotels with all the ammeneties!</div>
-<p><img alt="Daytona Bike Week" src="./images/daytona.jpg" style="display: block; margin: 0 auto"> </p>
+<p><img alt="Daytona Bike Week" src="/images/daytona.jpg" style="display: block; margin: 0 auto"> </p>
 <div style="text-align: justify">This package includes 1-4 days ride time to the rally, 10 days of the Daytona Bike Week rally, and 1-4 days ride time to return your party to the local meeting point where we started. All fuel stops are planned along the way and fuel costs are included in the package, you simply pull up to the pump and fill your tank! Food options are set before the adventure begins which means you don't have to think about where to eat that next meal because it's already been decided! Your lodging and accommodation options are also laid out before the start of your adventure, and The Unbound Nomad provides your party with a complete packing list to take all the wonder and worry out of preparing for the trip!</div>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/motorcycles.html">Motorcycles</a>
-      <a href="./tag/lifestyle.html">Lifestyle</a>
-      <a href="./tag/adventure.html">Adventure</a>
-      <a href="./tag/tours.html">Tours</a>
+      <a href="/tag/motorcycles.html">Motorcycles</a>
+      <a href="/tag/lifestyle.html">Lifestyle</a>
+      <a href="/tag/adventure.html">Adventure</a>
+      <a href="/tag/tours.html">Tours</a>
     </p>
   </div>
 
@@ -205,7 +205,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : ".",
+  "url" : "",
   "image": "",
   "description": ""
 }
