--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="./theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
 
@@ -37,7 +37,7 @@
   <meta property="og:title" content="The Unbound Nomad"/>
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="."/>
+  <meta property="og:url" content=""/>
 
 
 
@@ -49,12 +49,12 @@
 
 <aside>
   <div>
-    <a href="./">
-      <img src="./theme/img/profile.png" alt="" title="">
+    <a href="/">
+      <img src="/theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="./"></a>
+      <a href="/"></a>
     </h1>
 
 
@@ -65,19 +65,19 @@
 
             <li>
               <a target="_self"
-                 href="./pages/about.html#about">
+                 href="/pages/about.html#about">
                 | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/contact.html#contact">
+                 href="/pages/contact.html#contact">
                 | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/rides.html#rides">
+                 href="/pages/rides.html#rides">
                 | Rides |
               </a>
             </li>
@@ -136,7 +136,7 @@
 <!-- Centered -->
 <!-- ![Crazy Horse]({static}..\images\crazyHorse.png){: width=550 height=550 style="display: block; margin: 0 auto"} -->
 <!-- Left Aligned -->
-<p><img alt="Crazy Horse" src="./images/crazyHorse.png" style="margin: 0 auto" width="70%"></p>
+<p><img alt="Crazy Horse" src="/images/crazyHorse.png" style="margin: 0 auto" width="70%"></p>
 <h2>Customized Motorcycle Adventure Packages</h2>
 <div style="text-align: justify">The Unbound Nomad's curated motorcycle experiences redefine adventure travel, offering enthusiasts tailored tours that seamlessly blend thrill and comfort. Our all-inclusive travel packages cater to the wanderlust of riders, providing a one-stop solution for unforgettable journeys. Picture yourself embarking on a scenic ride, knowing that every detail, from route planning to accommodations, and everything in between, has been expertly curated by fellow riders who share your passion. Our unique approach goes beyond conventional travel, fostering a vibrant community where riders share stories, tips, and build lasting connections. With The Unbound Nomad, you're not just on a tour; you're part of an exclusive adventure-seeking family, where every ride is an opportunity to explore, connect, and embrace the freedom of the open road. Join us and elevate your motorcycle adventures to new heights.</div>
 <p><br></p>
@@ -190,7 +190,7 @@
 <h2>Featured Package: Sunshine Run 2024</h2>
 <div style="text-align: justify">The Sunshine Run 2024 will take riders from Columbus, Ohio, to Daytona Bike week in Daytona Beach, Florida. Registered riders will enjoy a 2-day guided ride to one of the best-known motorcycle rallies in the world, including fuel, food, lodging, and all other accommodations along the way. Spend 6 days and 7 nights in sunny Daytona Beach, Florida shopping countless vendors, catching stunt shows, bike shows, short track races, and even the famous Burning Bike event! Participants are sure to make countless memories with friends new and old at Daytona Bike Week.</div>
 
-<p><img alt="Daytona 2023" src="./images/daytona.jpg" style="display: block; margin: 0 auto"> </p>
+<p><img alt="Daytona 2023" src="/images/daytona.jpg" style="display: block; margin: 0 auto"> </p>
 <h2>Who We Are</h2>
 <div style="text-align: justify">Discover custom motorcycle adventures with The Unbound Nomad, your gateway to thrilling journeys across the United States. Our meticulously curated vacation packages cater to every rider's unique desires, from scenic day tours to iconic events like Sturgis or Daytona Bike Week. What sets us apart is our commitment to handling every detail, allowing you to focus solely on enjoying the ride. Whether you're a seasoned rider or a newcomer, our packages, complemented by comfortable lodging, transcend the ordinary. With The Unbound Nomad, redefine motorcycle travel, and let every moment on the road become an indelible memory. Explore without limits – gear up, rev your engines, and let the unforgettable journey begin! <b><u><a href="https://form.jotform.com/240327747576162">Book today!</a></u></b></div>  </div>
 </article>
@@ -207,7 +207,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : ".",
+  "url" : "",
   "image": "",
   "description": ""
 }
