--- a/archives.html
+++ b/archives.html
@@ -10,17 +10,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="./theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
 
@@ -37,7 +37,7 @@
   <meta property="og:title" content="The Unbound Nomad"/>
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="."/>
+  <meta property="og:url" content=""/>
 
   <title>The Unbound Nomad &ndash; Archives</title>
 
@@ -47,12 +47,12 @@
 
 <aside>
   <div>
-    <a href="./">
-      <img src="./theme/img/profile.png" alt="" title="">
+    <a href="/">
+      <img src="/theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="./"></a>
+      <a href="/"></a>
     </h1>
 
 
@@ -63,19 +63,19 @@
 
             <li>
               <a target="_self"
-                 href="./pages/about.html#about">
+                 href="/pages/about.html#about">
                 | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/contact.html#contact">
+                 href="/pages/contact.html#contact">
                 | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/rides.html#rides">
+                 href="/pages/rides.html#rides">
                 | Rides |
               </a>
             </li>
@@ -135,87 +135,87 @@
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./blue-ridge-parkway-tour.html">Blue Ridge Parkway Tour</a>
+          <a href="/blue-ridge-parkway-tour.html">Blue Ridge Parkway Tour</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./daytona-bike-week.html">Daytona Bike Week</a>
+          <a href="/daytona-bike-week.html">Daytona Bike Week</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./ohio-bike-week.html">Ohio Bike Week</a>
+          <a href="/ohio-bike-week.html">Ohio Bike Week</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./sturgis-motorcycle-rally.html">Sturgis Motorcycle Rally</a>
+          <a href="/sturgis-motorcycle-rally.html">Sturgis Motorcycle Rally</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./yellowstone-national-park-tour.html">Yellowstone National Park Tour</a>
+          <a href="/yellowstone-national-park-tour.html">Yellowstone National Park Tour</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./beartooth-highway-tour.html">Beartooth Highway Tour</a>
+          <a href="/beartooth-highway-tour.html">Beartooth Highway Tour</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./cherohalaskyway-tour.html">Cherohala Skyway Tour</a>
+          <a href="/cherohalaskyway-tour.html">Cherohala Skyway Tour</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./skyline-drive-tour.html">Skyline Drive Tour</a>
+          <a href="/skyline-drive-tour.html">Skyline Drive Tour</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./tail-of-the-dragon-tour.html">Tail of the Dragon Tour</a>
+          <a href="/tail-of-the-dragon-tour.html">Tail of the Dragon Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="./native-american-scenic-byway-tour.html">Native American Scenic Byway Tour</a>
+          <a href="/native-american-scenic-byway-tour.html">Native American Scenic Byway Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="./badlands-tour.html">Badlands Tour</a>
+          <a href="/badlands-tour.html">Badlands Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="./devils-tower-tour.html">Devil's Tower Tour</a>
+          <a href="/devils-tower-tour.html">Devil's Tower Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="./natchez-trace-tour.html">Natchez Trace Tour</a>
+          <a href="/natchez-trace-tour.html">Natchez Trace Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="./ohios-windy-9-tour.html">Ohio's Windy 9 Tour</a>
+          <a href="/ohios-windy-9-tour.html">Ohio's Windy 9 Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="./northwest-passage-scenic-byway-tour.html">Northwest Passage Scenic Byway Tour</a>
+          <a href="/northwest-passage-scenic-byway-tour.html">Northwest Passage Scenic Byway Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="./san-juan-mountain-skyway-tour.html">San Juan Mountain Skyway Tour</a>
+          <a href="/san-juan-mountain-skyway-tour.html">San Juan Mountain Skyway Tour</a>
         </dd>
           <dt>Sun 19 March 2023</dt>
 
         <dd>
-          <a href="./stay-safe-ride-hard.html">Stay Safe and Prepared: 10 Tips for Riding Your Motorcycle in the Rain</a>
+          <a href="/stay-safe-ride-hard.html">Stay Safe and Prepared: 10 Tips for Riding Your Motorcycle in the Rain</a>
         </dd>
     </dl>
   </div>
@@ -233,7 +233,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : ".",
+  "url" : "",
   "image": "",
   "description": ""
 }
