--- a/badlands-tour.html
+++ b/badlands-tour.html
@@ -10,17 +10,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="./theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
 
@@ -39,11 +39,11 @@
   <meta property="og:title" content="Badlands Tour"/>
   <meta property="og:description" content="Distance : Ride Time 182 miles : 3.5 hours Weave through old stone pillars and mountains and follow moderate turns and climbs through Badlands National Park. Enjoy topography that has evolved into chiseled spires, deep canyons and jagged buttes. This is an easy ride that you’ll want to take slow …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="./badlands-tour.html"/>
+  <meta property="og:url" content="/badlands-tour.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2024-01-13 20:55:00-06:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="./author/unbound-nomad.html">
+  <meta property="article:author" content="/author/unbound-nomad.html">
   <meta property="article:section" content="Rides"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
@@ -59,12 +59,12 @@
 
 <aside>
   <div>
-    <a href="./">
-      <img src="./theme/img/profile.png" alt="" title="">
+    <a href="/">
+      <img src="/theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="./"></a>
+      <a href="/"></a>
     </h1>
 
 
@@ -75,19 +75,19 @@
 
             <li>
               <a target="_self"
-                 href="./pages/about.html#about">
+                 href="/pages/about.html#about">
                 | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/contact.html#contact">
+                 href="/pages/contact.html#contact">
                 | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/rides.html#rides">
+                 href="/pages/rides.html#rides">
                 | Rides |
               </a>
             </li>
@@ -142,7 +142,7 @@
       
     <h1 id="badlands-tour">Badlands Tour</h1>
     <p>
-      Posted on Sat 13 January 2024 in <a href="./category/rides.html">Rides</a>
+      Posted on Sat 13 January 2024 in <a href="/category/rides.html">Rides</a>
 
     </p>
   </header>
@@ -174,14 +174,14 @@
 </tbody>
 </table>
 <div style="text-align: justify">Weave through old stone pillars and mountains and follow moderate turns and climbs through Badlands National Park. Enjoy topography that has evolved into chiseled spires, deep canyons and jagged buttes. This is an easy ride that you’ll want to take slow to fully experience the amazing scenery. Badlands National Park contains some of the most spectacular scenery of the Black Hills with deep gorges and tall spires. This ride will take you through Rapid City, Wall and Buffalo Gap National Grasslands.</div>
-<p><img alt="Badlands" src="./images/badlands.jpg" style="display: block; margin: 0 auto"> </p>
+<p><img alt="Badlands" src="/images/badlands.jpg" style="display: block; margin: 0 auto"> </p>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/motorcycles.html">Motorcycles</a>
-      <a href="./tag/lifestyle.html">Lifestyle</a>
-      <a href="./tag/adventure.html">Adventure</a>
-      <a href="./tag/tours.html">Tours</a>
+      <a href="/tag/motorcycles.html">Motorcycles</a>
+      <a href="/tag/lifestyle.html">Lifestyle</a>
+      <a href="/tag/adventure.html">Adventure</a>
+      <a href="/tag/tours.html">Tours</a>
     </p>
   </div>
 
@@ -204,7 +204,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : ".",
+  "url" : "",
   "image": "",
   "description": ""
 }
