--- a/beartooth-highway-tour.html
+++ b/beartooth-highway-tour.html
@@ -10,17 +10,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="./theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
 
@@ -39,11 +39,11 @@
   <meta property="og:title" content="Beartooth Highway Tour"/>
   <meta property="og:description" content="Distance : Ride Time 96.5 miles : 3.5 hours The Beartooth Highway is an All-American Road in the western United States on a section of U.S. Route 212 in Montana and Wyoming between Red Lodge and the Northeast entrance of Yellowstone National Park. Dubbed “the most beautiful roadway in …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="./beartooth-highway-tour.html"/>
+  <meta property="og:url" content="/beartooth-highway-tour.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2024-01-14 11:45:00-06:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="./author/unbound-nomad.html">
+  <meta property="article:author" content="/author/unbound-nomad.html">
   <meta property="article:section" content="Rides"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
@@ -59,12 +59,12 @@
 
 <aside>
   <div>
-    <a href="./">
-      <img src="./theme/img/profile.png" alt="" title="">
+    <a href="/">
+      <img src="/theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="./"></a>
+      <a href="/"></a>
     </h1>
 
 
@@ -75,19 +75,19 @@
 
             <li>
               <a target="_self"
-                 href="./pages/about.html#about">
+                 href="/pages/about.html#about">
                 | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/contact.html#contact">
+                 href="/pages/contact.html#contact">
                 | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/rides.html#rides">
+                 href="/pages/rides.html#rides">
                 | Rides |
               </a>
             </li>
@@ -142,7 +142,7 @@
       
     <h1 id="beartooth-highway-tour">Beartooth Highway Tour</h1>
     <p>
-      Posted on Sun 14 January 2024 in <a href="./category/rides.html">Rides</a>
+      Posted on Sun 14 January 2024 in <a href="/category/rides.html">Rides</a>
 
     </p>
   </header>
@@ -174,17 +174,17 @@
 </tbody>
 </table>
 <div style="text-align: justify">The Beartooth Highway is an All-American Road in the western United States on a section of U.S. Route 212 in Montana and Wyoming between Red Lodge and the Northeast entrance of Yellowstone National Park. Dubbed “the most beautiful roadway in America” by On the Road correspondent Charles Kuralt, the Beartooth Highway climbs to an astounding 10,947 feet above sea level. Since its completion in 1936, the Highway has awed millions of visitors with its astonishing views of one of the most rugged and wild areas in the lower 48 states.</div>
-<p><img alt="Beartooth Highway" src="./images/beartoothPass.jpg" style="display: block; margin: 0 auto"></p>
+<p><img alt="Beartooth Highway" src="/images/beartoothPass.jpg" style="display: block; margin: 0 auto"></p>
 <div style="text-align: justify">As it winds its way between the northeastern entrance of Yellowstone National Park and Red Lodge, the Highway traverses an impressive range of ecosystems – from lush lodge pole pine forests to alpine tundra. At the highway’s summit, travelers find themselves in a sky-high world of glacial cirques, clear alpine lakes, and snow that lingers through the summer months. The brutal climate at this elevation deters the growth of trees and shrubs, and the plants that do grow here have adapted in remarkable ways. Some convert sunlight to heat, and many conserve water the way desert plants do. In late June and July, the fragile tundra blossoms in a lavish display of wildflowers – shooting stars, columbine, and Indian paintbrush, to name a few.</div>
-<p><img alt="Beartooth Highway Tour" src="./images/beartoothPass2.jpg" style="display: block; margin: 0 auto"></p>
+<p><img alt="Beartooth Highway Tour" src="/images/beartoothPass2.jpg" style="display: block; margin: 0 auto"></p>
 <div style="text-align: justify">With 20 peaks over 12,000 feet in elevation (including Granite Peak, Montana’s highest at 12,799 feet), the Beartooth Mountains lie within the 943,377-acre Absaroka-Beartooth Wilderness. Grizzly and black bears make their home here, as do elk, deer, moose, bighorn sheep, Rocky Mountain goats, mountain lions and bobcats. With over 950 alpine lakes and hundreds of miles of trails, these mountains offer ample opportunities for recreation – much of it accessible from the Beartooth Highway.</div>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/motorcycles.html">Motorcycles</a>
-      <a href="./tag/lifestyle.html">Lifestyle</a>
-      <a href="./tag/adventure.html">Adventure</a>
-      <a href="./tag/tours.html">Tours</a>
+      <a href="/tag/motorcycles.html">Motorcycles</a>
+      <a href="/tag/lifestyle.html">Lifestyle</a>
+      <a href="/tag/adventure.html">Adventure</a>
+      <a href="/tag/tours.html">Tours</a>
     </p>
   </div>
 
@@ -207,7 +207,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : ".",
+  "url" : "",
   "image": "",
   "description": ""
 }
