--- a/drafts/marblehead-and-put-in-bay.html
+++ b/drafts/marblehead-and-put-in-bay.html
@@ -10,17 +10,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="../theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="../theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
 
@@ -39,11 +39,11 @@
   <meta property="og:title" content="Marblehead &amp; Put-in-Bay"/>
   <meta property="og:description" content="Distance : Ride Time 202 miles : 6 hours 35 mi 1h Marblehead is a village in Ottawa County, Ohio. Sitting at the tip of the Marblehead Peninsula, which divides Lake Erie proper from Sandusky Bay. Marblehead is home to the Marblehead Lighthouse, the oldest continuously-operating lighthouse on the American side of …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="../drafts/marblehead-and-put-in-bay.html"/>
+  <meta property="og:url" content="/drafts/marblehead-and-put-in-bay.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2024-01-13 20:14:00-06:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="../author/unbound-nomad.html">
+  <meta property="article:author" content="/author/unbound-nomad.html">
   <meta property="article:section" content="Blog"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
@@ -57,12 +57,12 @@
 
 <aside>
   <div>
-    <a href="../">
-      <img src="../theme/img/profile.png" alt="" title="">
+    <a href="/">
+      <img src="/theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="../"></a>
+      <a href="/"></a>
     </h1>
 
 
@@ -73,19 +73,19 @@
 
             <li>
               <a target="_self"
-                 href="../pages/about.html#about">
+                 href="/pages/about.html#about">
                 | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="../pages/contact.html#contact">
+                 href="/pages/contact.html#contact">
                 | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="../pages/rides.html#rides">
+                 href="/pages/rides.html#rides">
                 | Rides |
               </a>
             </li>
@@ -140,7 +140,7 @@
       
     <h1 id="marblehead-and-put-in-bay">Marblehead & Put-in-Bay</h1>
     <p>
-      Posted on Sat 13 January 2024 in <a href="../category/blog.html">Blog</a>
+      Posted on Sat 13 January 2024 in <a href="/category/blog.html">Blog</a>
 
     </p>
   </header>
@@ -182,8 +182,8 @@ Put-in-Bay is an Ohio village on South Bass Island in Lake Erie. Perry's Victory
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="../tag/motorcycles.html">Motorcycles</a>
-      <a href="../tag/lifestyle.html">Lifestyle</a>
+      <a href="/tag/motorcycles.html">Motorcycles</a>
+      <a href="/tag/lifestyle.html">Lifestyle</a>
     </p>
   </div>
 
@@ -206,7 +206,7 @@ Put-in-Bay is an Ohio village on South Bass Island in Lake Erie. Perry's Victory
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : "..",
+  "url" : "",
   "image": "",
   "description": ""
 }
