--- a/drafts/peak-to-peak-scenic-byway.html
+++ b/drafts/peak-to-peak-scenic-byway.html
@@ -10,17 +10,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="../theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="../theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
 
@@ -39,11 +39,11 @@
   <meta property="og:title" content="Peak to Peak Scenic Byway"/>
   <meta property="og:description" content="Distance : Ride Time 55 miles : 80 minutes Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="../drafts/peak-to-peak-scenic-byway.html"/>
+  <meta property="og:url" content="/drafts/peak-to-peak-scenic-byway.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2024-01-13 20:08:00-06:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="../author/unbound-nomad.html">
+  <meta property="article:author" content="/author/unbound-nomad.html">
   <meta property="article:section" content="Blog"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
@@ -57,12 +57,12 @@
 
 <aside>
   <div>
-    <a href="../">
-      <img src="../theme/img/profile.png" alt="" title="">
+    <a href="/">
+      <img src="/theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="../"></a>
+      <a href="/"></a>
     </h1>
 
 
@@ -73,19 +73,19 @@
 
             <li>
               <a target="_self"
-                 href="../pages/about.html#about">
+                 href="/pages/about.html#about">
                 | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="../pages/contact.html#contact">
+                 href="/pages/contact.html#contact">
                 | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="../pages/rides.html#rides">
+                 href="/pages/rides.html#rides">
                 | Rides |
               </a>
             </li>
@@ -140,7 +140,7 @@
       
     <h1 id="peak-to-peak-scenic-byway">Peak to Peak Scenic Byway</h1>
     <p>
-      Posted on Sat 13 January 2024 in <a href="../category/blog.html">Blog</a>
+      Posted on Sat 13 January 2024 in <a href="/category/blog.html">Blog</a>
 
     </p>
   </header>
@@ -175,8 +175,8 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="../tag/motorcycles.html">Motorcycles</a>
-      <a href="../tag/lifestyle.html">Lifestyle</a>
+      <a href="/tag/motorcycles.html">Motorcycles</a>
+      <a href="/tag/lifestyle.html">Lifestyle</a>
     </p>
   </div>
 
@@ -199,7 +199,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : "..",
+  "url" : "",
   "image": "",
   "description": ""
 }
