--- a/impressum.html
+++ b/impressum.html
@@ -10,17 +10,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="./theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
 
@@ -39,11 +39,11 @@
   <meta property="og:title" content="Impressum"/>
   <meta property="og:description" content="The Unbound Nomad Contact: - Email: unboundnomad@unboundnomad.com Legal Representative: Phil Grimes Disclaimer: This Impressum serves as a legal notice in accordance with applicable laws. The information provided here is for informational purposes only. While we strive to keep the information up to date and accurate, we make no representations …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="./impressum.html"/>
+  <meta property="og:url" content="/impressum.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2024-01-21 10:40:00-06:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="./author/unbound-nomad.html">
+  <meta property="article:author" content="/author/unbound-nomad.html">
   <meta property="article:section" content="Blog"/>
   <meta property="article:tag" content="Privacy"/>
   <meta property="og:image" content="">
@@ -56,12 +56,12 @@
 
 <aside>
   <div>
-    <a href="./">
-      <img src="./theme/img/profile.png" alt="" title="">
+    <a href="/">
+      <img src="/theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="./"></a>
+      <a href="/"></a>
     </h1>
 
 
@@ -72,19 +72,19 @@
 
             <li>
               <a target="_self"
-                 href="./pages/about.html#about">
+                 href="/pages/about.html#about">
                 | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/contact.html#contact">
+                 href="/pages/contact.html#contact">
                 | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/rides.html#rides">
+                 href="/pages/rides.html#rides">
                 | Rides |
               </a>
             </li>
@@ -139,7 +139,7 @@
       
     <h1 id="impressum">Impressum</h1>
     <p>
-      Posted on Sun 21 January 2024 in <a href="./category/blog.html">Blog</a>
+      Posted on Sun 21 January 2024 in <a href="/category/blog.html">Blog</a>
 
     </p>
   </header>
@@ -164,7 +164,7 @@ For information on how we handle your personal data, please refer to our Privacy
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/privacy.html">Privacy</a>
+      <a href="/tag/privacy.html">Privacy</a>
     </p>
   </div>
 
@@ -187,7 +187,7 @@ For information on how we handle your personal data, please refer to our Privacy
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : ".",
+  "url" : "",
   "image": "",
   "description": ""
 }
