--- a/natchez-trace-tour.html
+++ b/natchez-trace-tour.html
@@ -10,17 +10,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="./theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
 
@@ -39,11 +39,11 @@
   <meta property="og:title" content="Natchez Trace Tour"/>
   <meta property="og:description" content="Distance : Ride Time 459 miles : 8.75 hours This one-day ride along the Natchez Trace, also known as the Old Natchez Trace, takes rides through a historic forest trail which extends roughly 440 miles from Nashville, Tennessee, to Natchez, Mississippi, linking the Cumberland, Tennessee, and Mississippi rivers. This package starts …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="./natchez-trace-tour.html"/>
+  <meta property="og:url" content="/natchez-trace-tour.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2024-01-13 20:55:00-06:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="./author/unbound-nomad.html">
+  <meta property="article:author" content="/author/unbound-nomad.html">
   <meta property="article:section" content="Rides"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
@@ -59,12 +59,12 @@
 
 <aside>
   <div>
-    <a href="./">
-      <img src="./theme/img/profile.png" alt="" title="">
+    <a href="/">
+      <img src="/theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="./"></a>
+      <a href="/"></a>
     </h1>
 
 
@@ -75,19 +75,19 @@
 
             <li>
               <a target="_self"
-                 href="./pages/about.html#about">
+                 href="/pages/about.html#about">
                 | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/contact.html#contact">
+                 href="/pages/contact.html#contact">
                 | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/rides.html#rides">
+                 href="/pages/rides.html#rides">
                 | Rides |
               </a>
             </li>
@@ -142,7 +142,7 @@
       
     <h1 id="natchez-trace-tour">Natchez Trace Tour</h1>
     <p>
-      Posted on Sat 13 January 2024 in <a href="./category/rides.html">Rides</a>
+      Posted on Sat 13 January 2024 in <a href="/category/rides.html">Rides</a>
 
     </p>
   </header>
@@ -174,15 +174,15 @@
 </tbody>
 </table>
 <div style="text-align: justify">This one-day ride along the Natchez Trace, also known as the Old Natchez Trace, takes rides through a historic forest trail which extends roughly 440 miles from Nashville, Tennessee, to Natchez, Mississippi, linking the Cumberland, Tennessee, and Mississippi rivers.</div>
-<p><img alt="Natchez Trace" src="./images/natchezTrace.jpg" style="display: block; margin: 0 auto"> </p>
+<p><img alt="Natchez Trace" src="/images/natchezTrace.jpg" style="display: block; margin: 0 auto"> </p>
 <div style="text-align: justify">This package starts in Nashville, Tennessee, and takes riders along the trace to Natchez, Mississippi. All fuel stops are planned along the way and fuel costs are included in the package, you simply pull up to the pump and fill your tank! Food options are set before the adventure begins which means you don't have to think about where to eat that next meal because it's already been decided! Your lodging and accommodation options are also laid out before the start of your adventure, and The Unbound Nomad provides your party with a complete packing list to take all the wonder and worry out of preparing for the trip!</div>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/motorcycles.html">Motorcycles</a>
-      <a href="./tag/lifestyle.html">Lifestyle</a>
-      <a href="./tag/adventure.html">Adventure</a>
-      <a href="./tag/tours.html">Tours</a>
+      <a href="/tag/motorcycles.html">Motorcycles</a>
+      <a href="/tag/lifestyle.html">Lifestyle</a>
+      <a href="/tag/adventure.html">Adventure</a>
+      <a href="/tag/tours.html">Tours</a>
     </p>
   </div>
 
@@ -205,7 +205,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : ".",
+  "url" : "",
   "image": "",
   "description": ""
 }
