--- a/northwest-passage-scenic-byway-tour.html
+++ b/northwest-passage-scenic-byway-tour.html
@@ -10,17 +10,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="./theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
 
@@ -39,11 +39,11 @@
   <meta property="og:title" content="Northwest Passage Scenic Byway Tour"/>
   <meta property="og:description" content="Distance : Ride Time 206 miles : 6 hours The Northwest Passage Scenic Byway is Idaho’s longest byway. This route follows the route Lewis and Clark navigated through north-central Idaho. It begins at Lewiston, and arrives in Lolo Pass to the east. The traverse winds along the Clearwater River Canyon, parting …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="./northwest-passage-scenic-byway-tour.html"/>
+  <meta property="og:url" content="/northwest-passage-scenic-byway-tour.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2024-01-13 20:08:00-06:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="./author/unbound-nomad.html">
+  <meta property="article:author" content="/author/unbound-nomad.html">
   <meta property="article:section" content="Rides"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
@@ -59,12 +59,12 @@
 
 <aside>
   <div>
-    <a href="./">
-      <img src="./theme/img/profile.png" alt="" title="">
+    <a href="/">
+      <img src="/theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="./"></a>
+      <a href="/"></a>
     </h1>
 
 
@@ -75,19 +75,19 @@
 
             <li>
               <a target="_self"
-                 href="./pages/about.html#about">
+                 href="/pages/about.html#about">
                 | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/contact.html#contact">
+                 href="/pages/contact.html#contact">
                 | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/rides.html#rides">
+                 href="/pages/rides.html#rides">
                 | Rides |
               </a>
             </li>
@@ -142,7 +142,7 @@
       
     <h1 id="northwest-passage-scenic-byway-tour">Northwest Passage Scenic Byway Tour</h1>
     <p>
-      Posted on Sat 13 January 2024 in <a href="./category/rides.html">Rides</a>
+      Posted on Sat 13 January 2024 in <a href="/category/rides.html">Rides</a>
 
     </p>
   </header>
@@ -176,7 +176,7 @@
 <div style="text-align: justify">The Northwest Passage Scenic Byway is Idaho’s longest byway. This route follows the route Lewis and Clark navigated through north-central Idaho. It begins at Lewiston, and arrives in Lolo Pass to the east. The traverse winds along the Clearwater River Canyon, parting toward the Camas Prairie on one side while continuing along the Middle Fork of the Clearwater River on the other.</div>
 <p><br></p>
 <div style="text-align: justify">This byway moves through a magnificent wilderness, including the Lochsa Wild and Scenic River, and ends at the Lolo Pass Visitor Center. Following the route along U.S. 12 parallels the history trails of Lewis and Clark and Nez Perce. Before departing, stop to visit Hells Gate State Park, a public recreation area and entrance to Hells Canyon, the deepest canyon in North America, on the southern edge of Lewiston. And be sure to stop to see the Tsceminicum sculpture, a bronze artwork that speaks of Nez Perce legend creatures, located where the Clearwater and Snake Rivers meet in Lewiston.</div>
-<p><img alt="Northwest Passage Scenic Byway" height="295" src="./images/nwPassage.jpg" style="display: block; margin: 0 auto" width="456"> </p>
+<p><img alt="Northwest Passage Scenic Byway" height="295" src="/images/nwPassage.jpg" style="display: block; margin: 0 auto" width="456"> </p>
 <div style="text-align: justify">You'll visit the Nez Perce National Historical Park Visitor Center, which honors the inland northwest home to the Nimiipuu (Nez Perce) people, in nearby Spalding. The park consists of 38 places that are significant to the history and culture of the Nimiipuu. Located in Orofino off Hwy 12 is Canoe Camp, the location where Lewis and Clark, with the help of the Nimiipuu, built five canoes that would deliver them to the Pacific Ocean. According to the Nez Perce creation story, a coyote killed a large monster along the Clearwater River near present-day Kamiah, which resulted in the creation of different tribes in the region. The Heart of the Monster is a rock formation that represents this legend, also located within the park.</div>
 <p><br></p>
 <div style="text-align: justify">Kooskia Crossing is an historical marker that reveals four descriptive panels about the significance of the area. These panels are about the Lewis and Clark expedition; the Nez Perce flight of 1877; the brave quest of the Nimiipuu, called a Warrior’s Journey; and a timeline along the Clearwater River, called A Rich Traditional Land Use. Headquartered in Kooskia, the Lochsa Ranger District covers nearly 400,000 acres and offers plenty of wildlife viewing and recreational opportunities, including hiking and fishing.</div>
@@ -187,10 +187,10 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/motorcycles.html">Motorcycles</a>
-      <a href="./tag/lifestyle.html">Lifestyle</a>
-      <a href="./tag/adventure.html">Adventure</a>
-      <a href="./tag/tours.html">Tours</a>
+      <a href="/tag/motorcycles.html">Motorcycles</a>
+      <a href="/tag/lifestyle.html">Lifestyle</a>
+      <a href="/tag/adventure.html">Adventure</a>
+      <a href="/tag/tours.html">Tours</a>
     </p>
   </div>
 
@@ -213,7 +213,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : ".",
+  "url" : "",
   "image": "",
   "description": ""
 }
