--- a/stay-safe-ride-hard.html
+++ b/stay-safe-ride-hard.html
@@ -10,17 +10,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="./theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
 
@@ -39,11 +39,11 @@
   <meta property="og:title" content="Stay Safe and Prepared: 10 Tips for Riding Your Motorcycle in the Rain"/>
   <meta property="og:description" content="Riding a motorcycle in the rain can be challenging and risky, but with the right preparation and safety measures, you can enjoy the ride without compromising your well-being. As motorcycle enthusiasts, we understand the thrill and joy of hitting the open road and feeling the wind in our hair. However …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="./stay-safe-ride-hard.html"/>
+  <meta property="og:url" content="/stay-safe-ride-hard.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2023-03-19 16:40:00-05:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="./author/unbound-nomad.html">
+  <meta property="article:author" content="/author/unbound-nomad.html">
   <meta property="article:section" content="Blog"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
@@ -61,12 +61,12 @@
 
 <aside>
   <div>
-    <a href="./">
-      <img src="./theme/img/profile.png" alt="" title="">
+    <a href="/">
+      <img src="/theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="./"></a>
+      <a href="/"></a>
     </h1>
 
 
@@ -77,19 +77,19 @@
 
             <li>
               <a target="_self"
-                 href="./pages/about.html#about">
+                 href="/pages/about.html#about">
                 | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/contact.html#contact">
+                 href="/pages/contact.html#contact">
                 | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/rides.html#rides">
+                 href="/pages/rides.html#rides">
                 | Rides |
               </a>
             </li>
@@ -144,7 +144,7 @@
       
     <h1 id="stay-safe-ride-hard">Stay Safe and Prepared: 10 Tips for Riding Your Motorcycle in the Rain</h1>
     <p>
-      Posted on Sun 19 March 2023 in <a href="./category/blog.html">Blog</a>
+      Posted on Sun 19 March 2023 in <a href="/category/blog.html">Blog</a>
 
     </p>
   </header>
@@ -245,12 +245,12 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/motorcycles.html">Motorcycles</a>
-      <a href="./tag/lifestyle.html">Lifestyle</a>
-      <a href="./tag/rain.html">Rain</a>
-      <a href="./tag/riding.html">Riding</a>
-      <a href="./tag/gear.html">Gear</a>
-      <a href="./tag/skill.html">Skill</a>
+      <a href="/tag/motorcycles.html">Motorcycles</a>
+      <a href="/tag/lifestyle.html">Lifestyle</a>
+      <a href="/tag/rain.html">Rain</a>
+      <a href="/tag/riding.html">Riding</a>
+      <a href="/tag/gear.html">Gear</a>
+      <a href="/tag/skill.html">Skill</a>
     </p>
   </div>
 
@@ -273,7 +273,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : ".",
+  "url" : "",
   "image": "",
   "description": ""
 }
