--- a/yellowstone-national-park-tour.html
+++ b/yellowstone-national-park-tour.html
@@ -10,17 +10,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="./theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
 
@@ -39,11 +39,11 @@
   <meta property="og:title" content="Yellowstone National Park Tour"/>
   <meta property="og:description" content="Distance : Ride Time VARIED : VARIED On March 1, 1872, Yellowstone became the first national park for all to enjoy the unique hydrothermal and geologic features. Within Yellowstone&#39;s 2.2 million acres, visitors have unparalleled opportunities to observe wildlife in an intact ecosystem, explore geothermal areas that contain about half the …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="./yellowstone-national-park-tour.html"/>
+  <meta property="og:url" content="/yellowstone-national-park-tour.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2024-01-14 12:56:00-06:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="./author/unbound-nomad.html">
+  <meta property="article:author" content="/author/unbound-nomad.html">
   <meta property="article:section" content="Rides"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
@@ -59,12 +59,12 @@
 
 <aside>
   <div>
-    <a href="./">
-      <img src="./theme/img/profile.png" alt="" title="">
+    <a href="/">
+      <img src="/theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="./"></a>
+      <a href="/"></a>
     </h1>
 
 
@@ -75,19 +75,19 @@
 
             <li>
               <a target="_self"
-                 href="./pages/about.html#about">
+                 href="/pages/about.html#about">
                 | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/contact.html#contact">
+                 href="/pages/contact.html#contact">
                 | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="./pages/rides.html#rides">
+                 href="/pages/rides.html#rides">
                 | Rides |
               </a>
             </li>
@@ -142,7 +142,7 @@
       
     <h1 id="yellowstone-national-park-tour">Yellowstone National Park Tour</h1>
     <p>
-      Posted on Sun 14 January 2024 in <a href="./category/rides.html">Rides</a>
+      Posted on Sun 14 January 2024 in <a href="/category/rides.html">Rides</a>
 
     </p>
   </header>
@@ -174,14 +174,14 @@
 </tbody>
 </table>
 <div style="text-align: justify">On March 1, 1872, Yellowstone became the first national park for all to enjoy the unique hydrothermal and geologic features. Within Yellowstone's 2.2 million acres, visitors have unparalleled opportunities to observe wildlife in an intact ecosystem, explore geothermal areas that contain about half the world’s active geysers, and view geologic wonders like the Grand Canyon of the Yellowstone River. The Unbound Nomad tailors custom vacation packages to the park based upon your desired lodging, and sightseeing selections and length of stay. These packages are all-inclusive and cover lodging, food, and any admissions required for the duration of your adventure. There are no predefined routes for this tour as it is one of the most customized packages offered. </div>
-<p><img alt="Yellowstone National Park" src="./images/oldFaithful.jpg" style="display: block; margin: 0 auto"></p>
+<p><img alt="Yellowstone National Park" src="/images/oldFaithful.jpg" style="display: block; margin: 0 auto"></p>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/motorcycles.html">Motorcycles</a>
-      <a href="./tag/lifestyle.html">Lifestyle</a>
-      <a href="./tag/adventure.html">Adventure</a>
-      <a href="./tag/tours.html">Tours</a>
+      <a href="/tag/motorcycles.html">Motorcycles</a>
+      <a href="/tag/lifestyle.html">Lifestyle</a>
+      <a href="/tag/adventure.html">Adventure</a>
+      <a href="/tag/tours.html">Tours</a>
     </p>
   </div>
 
@@ -204,7 +204,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : ".",
+  "url" : "",
   "image": "",
   "description": ""
 }
