--- a/devils-tower-tour.html
+++ b/devils-tower-tour.html
@@ -150,7 +150,7 @@
 
   <div>
     <p>|Distance|:|Ride Time| |
-| :------: |:| :------------- | :------: |<FORM><INPUT TYPE="button" VALUE="Book Today!" onClick="parent.location='mailto:unboundnomad@unboundnomad.com?subject=Booking Request: Devil's Tower Tour'"></FORM>|
+| :------: |:| :------------- | :------: |<form><input type="button" value="Book Today!" onclick="window.open('https://form.jotform.com/240327747576162', '_blank')"></form>|
 | 156 miles|:|3.25 hours|
 <br></p>
 <div style="text-align: justify">Traveling from Sturgis to Devils Tower and back, this route takes you from a great area in South Dakota to a great area in Wyoming. The route is full of long sweeping curves that take you through diverse scenery including mountains, meadows and Devils Tower National Monument. The wide open roads are in good condition with gradual climbs and turns.</div>
