--- a/first-city-run.html
+++ b/first-city-run.html
@@ -31,13 +31,13 @@
  
 
 <meta name="author" content="Unbound Nomad" />
-<meta name="description" content="Embarking on an Unforgettable Journey with The Unbound Nomad Excitement is reaching its crescendo as The Unbound Nomad prepares for yet another epic motorcycle adventure, this time venturing from the vibrant streets of Columbus, Ohio, to the heart of Tennessee and Loretta Lynn&#39;s legendary ranch. Nestled in the picturesque countryside …" />
+<meta name="description" content="Length : Ride Time 4 days, plus round trip travel : VARIED The Motorcycles and Music Revival is a 4-day bike rally + music festival on Loretta Lynn&#39;s Ranch. The Tennessee Motorcycles &amp; Music Revival (commonly called TMMR or simply The Revival) is an annual Spring event that brings together motorcycle enthusiasts, music fans …" />
 <meta name="keywords" content="Motorcycles, Lifestyle, Adventure, Tours">
 
 
   <meta property="og:site_name" content="The Unbound Nomad"/>
   <meta property="og:title" content="First City Run"/>
-  <meta property="og:description" content="Embarking on an Unforgettable Journey with The Unbound Nomad Excitement is reaching its crescendo as The Unbound Nomad prepares for yet another epic motorcycle adventure, this time venturing from the vibrant streets of Columbus, Ohio, to the heart of Tennessee and Loretta Lynn&#39;s legendary ranch. Nestled in the picturesque countryside …"/>
+  <meta property="og:description" content="Length : Ride Time 4 days, plus round trip travel : VARIED The Motorcycles and Music Revival is a 4-day bike rally + music festival on Loretta Lynn&#39;s Ranch. The Tennessee Motorcycles &amp; Music Revival (commonly called TMMR or simply The Revival) is an annual Spring event that brings together motorcycle enthusiasts, music fans …"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="/first-city-run.html"/>
   <meta property="og:type" content="article"/>
@@ -149,40 +149,33 @@
 
 
   <div>
-    <h1>Embarking on an Unforgettable Journey with The Unbound Nomad</h1>
-<div style="text-align: justify">Excitement is reaching its crescendo as The Unbound Nomad prepares for yet another epic motorcycle adventure, this time venturing from the vibrant streets of Columbus, Ohio, to the heart of Tennessee and Loretta Lynn's legendary ranch. Nestled in the picturesque countryside, the Motorcycles and Music Revival awaits, seamlessly blending the thunderous thrill of motorcycles with the soul-stirring power of live music. As we get ready for this extraordinary journey, join The Unbound Nomad community for an exclusive peek behind the scenes at the meticulous planning that goes into crafting a truly thrilling road trip experience.</div>
-
-<h1>Roaring Into Adventure</h1>
-<div style="text-align: justify">The pack will ride out of Columbus, Ohio, not just with the twist of the throttle but with a promise – a promise of discovery, adventure, and the camaraderie that awaits us on the road to Loretta Lynn's ranch. It's more than a mere road trip; it's a curated journey, thoughtfully designed to include scenic byways and hidden gems that adorn the landscape. Join us, whether you're bringing along old friends or making new ones; this adventure is a collective endeavor to weave memories of landscapes and emotions, with the ultimate destination being an experience waiting to unfold.</div>
-
-<h1>The Heartbeat of the Ride</h1>
-<div style="text-align: justify">At the core of any successful motorcycle trip lies the heartbeat of the journey – the motorcycle itself. Before the rubber meets the road, a meticulous checklist, sworn by every experienced rider, comes into play. The Unbound Nomad ensures our guide bikes undergo a thorough mechanical check, leaving no bolt or nut untouched before each adventure. With a clean bill of health, riders can confidently embrace the symphony of roars that accompany the exhilarating moments on the open road.</div>
-
-<h1>Packing for the Road</h1>
-<div style="text-align: justify">Packing for an adventure like this is an art – a delicate dance between preparedness and the thrill of the unknown. The Unbound Nomad provides a carefully curated packing list for each guided trip, including everything from weather-resistant gear to comfort essentials for those long stretches. The road unfolds, and so do our plans for accommodations – whether it's under the stars or in a roadside motel. Organized documentation, from motorcycle licenses to insurance papers, signals our readiness for the adventure that awaits.</div>
-
-<h1>Anticipation in the Air</h1>
-<div style="text-align: justify">As the logistics fall into place, an undeniable thrill reverberates among the registered riders and The Unbound Nomad Community. The open road awaits, promising new adventures and the heartbeat of every rider's journey. The buzz of excitement isn't just a prelude; it's the symphony that accompanies us as we gear up for this epic motorcycle odyssey. This journey transcends being a mere series of miles; it's a collection of memories waiting to unfold and friendships forged under the vast sky. The motorcycle is more than a mode of transportation; it's a conduit to freedom, self-discovery, and a connection with ever-changing landscapes.</div>
-
-<h1>The Call of the Country</h1>
-<div style="text-align: justify">The Motorcycles and Music event, nestled in the heart of Tennessee, is the magnetic force that beckons us southward like a siren's song. The allure of live music, the camaraderie of fellow riders, and the chance to explore Loretta Lynn's iconic ranch create a cocktail of excitement to which we eagerly raise our glasses. Join The Unbound Nomad as we set forth in pursuit of another unforgettable experience. As the journey unfolds in the unpredictable Midwest spring, the course and plans will adjust with the weather as the trip will go on rain or shine. Safe riding habits, adherence to traffic rules, and maintaining a weather-aware mindset are the unsung heroes of every road trip. In the end, it's not just about reaching the destination; it's about savoring every moment of the ride, with safety as the unwavering companion on this thrilling adventure.</div>
-
-<h1>Safety: A Non-Negotiable Priority</h1>
-<div style="text-align: justify">The Unbound Nomad knows that safety is not just a consideration – it's a non-negotiable priority on a long-distance motorcycle adventure. Years of experience in managing logistics and planning gives our community the freedom to enjoy the view while having confidence that all details have been handled well in advance. A suggested packing list, including tools for roadside reparis, signifies our commitment to safety and respect for the journey ahead. Emergency preparedness is another cornerstone of this adventure. Our packing suggestions include more than just tools and clothes – we also recommend convenience items and a first aid kit that could make all the difference. Additionally, a network of reliable contacts will be aware of the route, ready to step in if needed. Riding is not just about the thrill; it's about embracing the responsibility that comes with the freedom of the road.</div>
-
-<h1>Capturing the Journey</h1>
-<div style="text-align: justify">To The Unbound Nomad, the road ahead is not just a route; it's a canvas waiting to be painted with the vibrant colors of adventure. Our guided motorcycle adventures include a collection of cameras to capture sweeping landscapes, hidden gems, and candid camaraderie. Each photograph becomes a snapshot of the journey's heartbeat, frozen in time to share with those who follow along. The videos, compiled as a souvineer memento, offers participants a chance to relive the adventure and share it with those who couldn't attend. Yet, the journey isn't confined to pixels and frames; it's etched into the pages of this website. The written word accompanies the visual feast, salvaging the intimate details that photos alone can't convey. From the taste of local cuisine to the fleeting emotions stirred by passing landscapes, this ride journal becomes a treasure trove of memories, with each page telling a story that goes beyond the mere miles covered.</div>
-
-<h1>Building our Community</h1>
-<div style="text-align: justify">As the road unfolds, social media becomes the bridge that shares this adventure with the world. Real-time updates invite The Unbound Nomad community and curious onlookers to join the ride virtually. Through hashtags and engaging content, The Unbound Nomad hopes to create a community that shares the passion for the open road. Because this journey is about us – the riders, the dreamers, and the seekers of the extraordinary. The road is not just a path traveled; it's a tapestry woven with the stories of every rider who embraces the thrill of the journey. As we gear up for this adventure, The Unbound Nomad invites you not just to be a spectator but a participant in the shared narrative of the open road. Participants can share their own experiences along the trip, whether they're tales of triumph, unexpected challenges, or the simple joy of the wind and the road. Your stories make the road richer, and we'd love to hear them. And those who can't join us in person can like, share and comment on social media posts, as well as contributing to the conversations on our Facebook group. </div>
-
-<h1>Beyond the Gates</h1>
-<div style="text-align: justify">Loretta Lynn's ranch may mark the pinacle of the trip, but the journey is the true destination. Beyond the gates of the iconic ranch, the road continues, and so does the story. Post-trip reflections delve into the lessons learned, the unexpected discoveries, and the personal growth that blossomed on the asphalt. It's not just about the destination; it's about the transformative power of the adventure itself. We're eager to hear from our community members. Do you know of a hidden gem along the route, a charming local diner, or a breathtaking scenic overlook we should incorporate into the agenda? Share your must-see spots with us on Instagram and help us create a collective guide for riders exploring the same paths. Your insights might just turn a regular stop into an unforgettable highlight of the journey. As we hit the road, don't just follow along from home – be a part of the adventure. Book your trip today, or use the hashtags #OpenRoadTales and #RiderCommunity to share your own motorcycle escapades on Facebook, Instagram, and Twitter. We'll be checking in with live updates, challenges, and glimpses of the journey along the way. Engage, interact, and join a community where the love for the road binds us together. Who knows, your photo or story might be featured in the upcoming posts, showcasing the diverse and vibrant world of riders like you.</div>
-
-<h1>Conclusion: An Odyssey Awaits</h1>
-<div style="text-align: justify">Rev the engine and feel the open road stretching as far as the eye can see; the culmination of excitement and anticipation is palpable. The journey from Columbus to Loretta Lynn's ranch promises to be more than just another road trip; The Unbound Nomad offers an odyssey filled with discovery, camaraderie, and the unmistakable freedom that comes with every one of our guided motorcycle adventures. The Unbound Nomad extends heartfelt gratitude to all registered riders joining us for this ride. The road is unpredictable, and that's what makes each journey so exhilarating. Seize this opportunity to explore not just the asphalt but the shared stories and experiences that make our guided motorcycle adventures unique.</div>
-
-<div style="text-align: justify">As the engines roar to life, The Unbound Nomad invites you to stay tuned for real-time updates, challenges, and the unfolding stories of the road. Your engagement, stories, and recommendations will continue to shape this adventure. This is our shared journey, a collective exploration of the open road and the vibrant community that thrives on the love for motorcycles and music. So, fasten your seatbelts, or in this case, tighten your helmet straps, as we embark on a journey that goes beyond the destination. Stay connected through social media, share your own adventures using #OpenRoadTales, and let's build a community that celebrates the joy of the ride. Until the next update, may the road ahead be filled with twists, turns, and the kind of exhilaration only a motorcycle adventure can bring. Ride on, fellow enthusiasts!</div>
+    <table>
+<thead>
+<tr>
+<th style="text-align: center;">Length</th>
+<th style="text-align: center;">:</th>
+<th style="text-align: left;">Ride Time</th>
+<th style="text-align: center;"></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align: center;">4 days, plus round trip travel</td>
+<td style="text-align: center;">:</td>
+<td style="text-align: left;">VARIED</td>
+<td style="text-align: center;"><form><input type="button" value="Book Today!" onclick="window.open('https://form.jotform.com/240327747576162', '_blank')"></form></td>
+</tr>
+<tr>
+<td style="text-align: center;"><br></td>
+<td style="text-align: center;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: center;"></td>
+</tr>
+</tbody>
+</table>
+<div style="text-align: justify">The Motorcycles and Music Revival is a 4-day bike rally + music festival on Loretta Lynn's Ranch. The Tennessee Motorcycles & Music Revival (commonly called TMMR or simply The Revival) is an annual Spring event that brings together motorcycle enthusiasts, music fans, and outdoor lovers for an unforgettable experience that will REVIVE your soul!   The Harley-Davidson Motor Company and many of their dealers come together to welcome riders of all types and brands of motorcycles to participate and watch more two-wheeled action than any single event can offer. The musical artists range from many genres including country, outlaw country, southern rock, bluegrass and more and features some legendary acts, trending bands and many emerging artists.  Outdoor lovers enjoy camping, Hurricane Creek, the trails and all of the amenities and beauty of the ranch.  All across the grounds, Southern hospitality radiates..</div>
+<p><img alt="Motorycles and Music Revival" src="/images/TMMR.jpg" style="display: block; margin: 0 auto"> </p>
+<div style="text-align: justify">This package includes ride time to the event, 4 days of the Revival, ride time to return your party to the local meeting point where we started. All fuel stops are planned along the way and fuel costs are included in the package, you simply pull up to the pump and fill your tank! Food options are set before the adventure begins which means you don't have to think about where to eat that next meal because it's already been decided! Your lodging and accommodation options are also laid out before the start of your adventure, and The Unbound Nomad provides your party with a complete packing list to take all the wonder and worry out of preparing for the trip!</div>
   </div>
   <div class="tag-cloud">
     <p>
