--- a/pages/contact.html
+++ b/pages/contact.html
@@ -136,18 +136,19 @@
 <p>Welcome to our contact page! We're excited to hear from you. If you have any questions, suggestions, or just want to say hello, feel free to reach out through the following channels:</p>
 <ul>
 <li>
-<p><strong>Email:</strong> <a href="mailto:unboundnomad@unboundnomad.com">unboundnomad@unboundnomad.com</a></p>
+<p><strong>Email:</strong> <b><u><a href="mailto:recipient@example.com?subject=Your%20Subject&body=Your%20Message">unboundnomad@unboundnomad.com</a></u></b></p>
 </li>
 <li>
-<p><strong>Twitter:</strong> <a href="https://x.com/unbound_nomad">@unbound_nomad</a></p>
+<p><strong>Twitter:</strong> <b><u><a href="https://x.com/unbound_nomad", target="_blank">@unbound_nomad</a></u></b></p>
 </li>
 <li>
-<p><strong>Facebook:</strong> <a href="https://www.facebook.com/profile.php?id=61554818544356">The Unbound Nomad</a></p>
+<p><strong>Facebook:</strong> <b><u><a href="https://www.facebook.com/profile.php?id=61554818544356", target="_blank">The Unbound Nomad</a></u></b></p>
 </li>
 <li>
-<p><strong>Instagram:</strong> <a href="https://www.instagram.com/unbound_nomad/">@unbound_nomad</a></p>
+<p><strong>Instagram:</strong> <b><u><a href=https://www.instagram.com/unbound_nomad/", target="_blank">@unbound_nomad</a></u></b></p>
 </li>
 </ul>
+<p><img alt="Handshake" src="/images/handshake.png" style="display: block; margin: 0 auto"></p>
 <p>Feel free to connect with us on any of the platforms above. We value your feedback and look forward to hearing from you!</p>  </div>
 </article>
 
