--- a/pages/rides.html
+++ b/pages/rides.html
@@ -151,22 +151,22 @@
 <tr>
 <td style="text-align: center;">2/28/2024</td>
 <td style="text-align: left;"><a href="../daytona-bike-week.html">Sunshine Run</a></td>
-<td style="text-align: left;">Run from Ohio to Daytona Bike Week</td>
+<td style="text-align: left;">Event: Daytona Bike Week</td>
 </tr>
 <tr>
 <td style="text-align: center;">4/16/2024</td>
-<td style="text-align: left;"><a href="../first-city-run.html">Fist City Run</a></td>
-<td style="text-align: left;">Run to Motorcycles &amp; Music Revival</td>
+<td style="text-align: left;"><a href="../first-city-run.html">First City Run</a></td>
+<td style="text-align: left;">Event: Motorcycles &amp; Music Revival</td>
 </tr>
 <tr>
 <td style="text-align: center;">5/24/2024</td>
 <td style="text-align: left;"><a href="../ohio-bike-week.html#ohio-bike-week">Buckeye Run</a></td>
-<td style="text-align: left;">Run to Ohio Bike Week</td>
+<td style="text-align: left;">Event: Ohio Bike Week</td>
 </tr>
 <tr>
 <td style="text-align: center;">7/11/2024</td>
 <td style="text-align: left;">Lincoln Run</td>
-<td style="text-align: left;">Run to Gettysburg Bike Week</td>
+<td style="text-align: left;">Event: Gettysburg Bike Week</td>
 </tr>
 <tr>
 <td style="text-align: center;">8/1/2024</td>
