--- a/drafts/peak-to-peak-scenic-byway.html
+++ b/drafts/peak-to-peak-scenic-byway.html
@@ -161,7 +161,7 @@
 <td style="text-align: center;">55 miles</td>
 <td style="text-align: center;">:</td>
 <td style="text-align: left;">80 minutes</td>
-<td style="text-align: center;"><FORM><INPUT TYPE="button" VALUE="Book Today!" onClick="parent.location='mailto:unboundnomad@unboundnomad.com?subject=Booking Request: Peak to Peak Scenic Byway'"></FORM></td>
+<td style="text-align: center;"><form><input type="button" value="Book Today!" onclick="window.open('https://form.jotform.com/240327747576162', '_blank')"></form></td>
 </tr>
 <tr>
 <td style="text-align: center;"><br></td>
