--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
 <p><br></p>
 <!-- HTML -->
 <div style="text-align: center;">
-  <button class="button-36" role="button" onclick="sendEmail()">Book Today!</button>
+  <button class="button-36" role="button" onclick="formLink()">Book Today!</button>
 </div>
 
 <!-- JavaScript -->
 <script>
-  function sendEmail() {
-    window.location.href = "https://form.jotform.com/240327747576162";
+  function formLink() {
+    window.open("https://form.jotform.com/240327747576162", "_blank");
   }
 </script>
 
@@ -186,13 +186,14 @@
     }
   }
 </style>
+
 <p><br></p>
 <h2>Featured Package: Sunshine Run 2024</h2>
 <div style="text-align: justify">The Sunshine Run 2024 will take riders from Columbus, Ohio, to Daytona Bike week in Daytona Beach, Florida. Registered riders will enjoy a 2-day guided ride to one of the best-known motorcycle rallies in the world, including fuel, food, lodging, and all other accommodations along the way. Spend 6 days and 7 nights in sunny Daytona Beach, Florida shopping countless vendors, catching stunt shows, bike shows, short track races, and even the famous Burning Bike event! Participants are sure to make countless memories with friends new and old at Daytona Bike Week.</div>
 
 <p><img alt="Daytona 2023" src="/images/daytona.jpg" style="display: block; margin: 0 auto"> </p>
 <h2>Who We Are</h2>
-<div style="text-align: justify">Discover custom motorcycle adventures with The Unbound Nomad, your gateway to thrilling journeys across the United States. Our meticulously curated vacation packages cater to every rider's unique desires, from scenic day tours to iconic events like Sturgis or Daytona Bike Week. What sets us apart is our commitment to handling every detail, allowing you to focus solely on enjoying the ride. Whether you're a seasoned rider or a newcomer, our packages, complemented by comfortable lodging, transcend the ordinary. With The Unbound Nomad, redefine motorcycle travel, and let every moment on the road become an indelible memory. Explore without limits – gear up, rev your engines, and let the unforgettable journey begin! <b><u><a href="https://form.jotform.com/240327747576162">Book today!</a></u></b></div>  </div>
+<div style="text-align: justify">Discover custom motorcycle adventures with The Unbound Nomad, your gateway to thrilling journeys across the United States. Our meticulously curated vacation packages cater to every rider's unique desires, from scenic day tours to iconic events like Sturgis or Daytona Bike Week. What sets us apart is our commitment to handling every detail, allowing you to focus solely on enjoying the ride. Whether you're a seasoned rider or a newcomer, our packages, complemented by comfortable lodging, transcend the ordinary. With The Unbound Nomad, redefine motorcycle travel, and let every moment on the road become an indelible memory. Explore without limits – gear up, rev your engines, and let the unforgettable journey begin! <b><u><a href="https://form.jotform.com/240327747576162" target="_blank">Book today!</a></u></b></div>  </div>
 </article>
 
 <footer>
