--- a/sturgis-motorcycle-rally.html
+++ b/sturgis-motorcycle-rally.html
@@ -163,7 +163,7 @@
 <td style="text-align: center;">10 days, plus round trip travel</td>
 <td style="text-align: center;">:</td>
 <td style="text-align: left;">VARIED</td>
-<td style="text-align: center;"><FORM><INPUT TYPE="button" VALUE="Book Today!" onClick="parent.location='mailto:unboundnomad@unboundnomad.com?subject=Booking Request: Sturgis Motorcycle Rally'"></FORM></td>
+<td style="text-align: center;"><form><input type="button" value="Book Today!" onclick="window.open('https://form.jotform.com/240327747576162', '_blank')"></form></td>
 </tr>
 <tr>
 <td style="text-align: center;"><br></td>
