--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -48,7 +48,9 @@
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content=""/>
 
-  <title>The Unbound Nomad &ndash; Tag Gear</title>
+
+
+  <title>The Unbound Nomad &ndash; | Product Reviews |</title>
 
 
 </head>
@@ -140,32 +142,33 @@
   <main>
 
 
-
-
-<article>
+<article class="single">
   <header>
-    <h2><a href="/stay-safe-ride-hard.html#stay-safe-ride-hard">Stay Safe and Prepared: 10 Tips for Riding Your Motorcycle in the Rain</a></h2>
-    <p>
-      Posted on Sun 19 March 2023 in <a href="/category/blog.html">Blog</a>
-
-          &#8226; Tagged with
-              <a href="/tag/motorcycles.html">Motorcycles</a>,              <a href="/tag/lifestyle.html">Lifestyle</a>,              <a href="/tag/rain.html">Rain</a>,              <a href="/tag/riding.html">Riding</a>,              <a href="/tag/gear.html">Gear</a>,              <a href="/tag/skill.html">Skill</a>
-    </p>
+    
+    <h1 id="reviews">| Product Reviews |</h1>
   </header>
   <div>
-      <div><p>Riding a motorcycle in the rain can be challenging and risky, but with the right preparation and safety measures, you can enjoy the ride without compromising your well-being. As motorcycle enthusiasts, we understand the thrill and joy of hitting the open road and feeling the wind in our hair. However …</p></div>
-        <br>
-        <a class="btn"
-           href="/stay-safe-ride-hard.html#stay-safe-ride-hard">
-          Continue reading
-        </a>
-  </div>
+<div style="text-align: center"><img width="40%" src="http://localhost:8000/images/productReview.jpg"></div>
+
+<div style="text-align: justify">As an avid motorcycle rider, full-time RVer, and general nomad, I have the opportunity to use a wide variety of gear. I decided to start sharing my thoughts on these things with my friends here in hopes of saving you some of the trial, error, and frustration that I've had to deal with along the way. This list will grow over time, and if there is a product you'd like to see reviewed, please <a href="http://localhost:8000/pages/contact.html">contact me</a>!</div>
+
+<table>
+<thead>
+<tr>
+<th style="text-align: center;">Date</th>
+<th style="text-align: left;">Product</th>
+<th style="text-align: left;">Sold on</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align: center;">3/31/2024</td>
+<td style="text-align: left;"><a href="../blackWidow.html">Black Widow Wheel Chock</a></td>
+<td style="text-align: left;"><a href="https://discountramps.com">Discount Ramps</a></td>
+</tr>
+</tbody>
+</table>  </div>
 </article>
-
-  <div class="pagination">
-  </div>
-
-
 
 <footer>
 	<p class = "credit">Copyright &copy 2020 - <script type="text/javascript">
