--- a/stay-safe-ride-hard.html
+++ b/stay-safe-ride-hard.html
@@ -98,6 +98,12 @@
             </li>
             <li>
               <a target="_self"
+                 href="/pages/reviews.html#reviews">
+                | Product Reviews |
+              </a>
+            </li>
+            <li>
+              <a target="_self"
                  href="/pages/rides.html#rides">
                 | Rides |
               </a>
